# medman-sports-video-processor

./: .gitignore  Cargo.toml  README.md  TODO.md
prompt_dev/: mamameditation.md  medmansports.md
src/: ffmpeg.rs  main.rs  openai.rs  whisper.rs
~/: .zshrc
